# simplex

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/constrait/: CMakeLists.txt  constrait.cpp  constrait.hpp
src/data/: CMakeLists.txt  data.cpp  data.hpp
src/expression/: CMakeLists.txt  expression.cpp  expression.hpp
src/solver/: CMakeLists.txt  solver.cpp  solver.hpp
src/tests/: CMakeLists.txt  test.cpp
